--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
     <!-- Main row -->
     <div class="row vh-100">
       <!-- Sidebar column -->
-      <div class="col-2 text-white d-flex flex-column justify-content-start" style="background-color: #252525;">
-        <div class="d-flex justify-content-center mb-4 mt-4">
-          <img src="logo 2.svg" style="width: 100%;"> 
+      <div class="col-2 text-white d-flex flex-column align-items-center " style="background-color: #252525;">
+        <div class="d-flex justify-content-start mb-4 mt-4 mr-1">
+          <img src="logo 1.svg" style="width: 80%;"> 
         </div>
-        <!-- Sidebar buttons with Font Awesome icons -->
+        <div class="justify-content-start">
+          <!-- Sidebar buttons with Font Awesome icons -->
         <button class="btn btn-link text-white my-4" type="button" title="Home" onclick="window.location.href='index.html'">
           <div class="d-flex justify-content-start buttons">
             <i class="fas fa-house" style="font-size: 3vw; color:aqua;"></i>
@@ -62,6 +63,8 @@
             <span class="ml-3" style="font-size: 2vw;">About</span>
             </div>
         </button>
+        </div>
+        
       </div>
       <!-- Main content column -->
       <div class="col-10 home d-flex flex-column justify-content-start" id="main-content">
