--- a/backpage.html
+++ b/backpage.html
@@ -17,8 +17,8 @@
         <div class="row vh-100">
             <!-- Sidebar -->
             <div class="col-2 text-white d-flex flex-column align-items-center " style="background-color: #252525;">
-                <div class="d-flex justify-content-start mb-4 mt-4 mr-1">
-                  <img src="logo 1.svg" style="width: 80%;"> 
+                <div class="d-flex justify-content-start mb-4 mt-4 ml-2">
+                    <img src="logo 1.svg" style="width: 80%;"> 
                 </div>
                 <div class="justify-content-start">
                   <!-- Sidebar buttons with Font Awesome icons -->
