--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="row vh-100">
       <!-- Sidebar column -->
       <div class="col-2 text-white d-flex flex-column align-items-center " style="background-color: #252525;">
-        <div class="d-flex justify-content-start mb-4 mt-4 mr-1">
+        <div class="d-flex justify-content-start mb-4 mt-4 ml-2">
           <img src="logo 1.svg" style="width: 80%;"> 
         </div>
         <div class="justify-content-start">
