--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                 <button class="btn btn-link text-white my-4 buttons" type="button" title="About" onclick="window.location.href='about.html'">
                   <div class="d-flex justify-content-start">
                     <i class="fas fa-circle-question" style="font-size: 3vw; color: aqua;"></i>
-                    <span class="ml-3" style="font-size: 2vw;  ">About</span>
+                    <span class="ml-3" style="font-size: 2vw; color: aqua;">About</span>
                     </div>
                 </button>
                 </div>
