--- a/connectionSettings.html
+++ b/connectionSettings.html
@@ -42,7 +42,7 @@
                 <button class="btn btn-link text-white my-4" type="button" title="Device" onclick="window.location.href='connectionSettings.html'">
                   <div class="d-flex justify-content-start buttons">
                     <i class="fas fa-gear" style="font-size: 3vw; color:aqua;"></i>
-                    <span class="ml-3" style="font-size: 2vw;">Settings</span>
+                    <span class="ml-3" style="font-size: 2vw; color: aqua;">Settings</span>
                     </div>
                 </button>
         
