--- a/backpage.html
+++ b/backpage.html
@@ -33,7 +33,7 @@
                 <button class="btn btn-link text-white my-4" type="button" title="Settings" onclick="window.location.href='backpage.html'">
                   <div class="d-flex justify-content-start buttons ">
                     <i class="fas fa-sliders" style="font-size: 3vw; color: aqua;"></i>
-                    <span class="ml-3" style="font-size: 2vw;  ">Device</span>
+                    <span class="ml-3" style="font-size: 2vw; color: aqua;">Device</span>
                   </div>
                 </button>
         
