--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
                             sustainable future.
                         </p>
                         <h4>Find more</h4>
-                        <a href="https://www.ee.cityu.edu.hk/~chjiang/Research.html">
+                        <a href="https://www.ee.cityu.edu.hk/~chjiang/Research.html" target="_blank">
                             https://www.ee.cityu.edu.hk/~chjiang/Research.html
                         </a>
                         </div>
