Before package changes

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                 </button>
         
                 <!-- Button for Settings with icon and text -->
-                <button class="btn btn-link text-white my-4" type="button" title="Settings" onclick="window.location.href='backpage.html'">
+                <button class="btn btn-link text-white my-4" type="button" title="Settings" onclick="window.location.href='device.html'">
                   <div class="d-flex justify-content-start buttons">
                     <i class="fas fa-sliders" style="font-size: 3vw;"></i>
                     <span class="ml-3" style="font-size: 2vw; ">Device</span>
@@ -80,7 +80,7 @@
                 </button>
         
                 <!-- Button for About with icon and text -->
-                <button class="btn btn-link text-white my-4 buttons" type="button" title="About" onclick="window.location.href='about.html'">
+                <button class="btn btn-link text-white my-4 buttons" type="button" title="About" onclick="">
                   <div class="d-flex justify-content-start">
                     <i class="fas fa-circle-question" style="font-size: 3vw; color: aqua;"></i>
                     <span class="ml-3" style="font-size: 2vw; color: aqua;">About</span>
