--- a/connectionSettings.html
+++ b/connectionSettings.html
@@ -31,7 +31,7 @@
                 </button>
         
                 <!-- Button for Settings with icon and text -->
-                <button class="btn btn-link text-white my-4" type="button" title="Settings" onclick="window.location.href='backpage.html'">
+                <button class="btn btn-link text-white my-4" type="button" title="Settings" onclick="window.location.href='device.html'">
                   <div class="d-flex justify-content-start buttons">
                     <i class="fas fa-sliders" style="font-size: 3vw;"></i>
                     <span class="ml-3" style="font-size: 2vw;  ">Device</span>
@@ -39,7 +39,7 @@
                 </button>
         
                 <!-- Button for Device with icon and text -->
-                <button class="btn btn-link text-white my-4" type="button" title="Device" onclick="window.location.href='connectionSettings.html'">
+                <button class="btn btn-link text-white my-4" type="button" title="Device" onclick="">
                   <div class="d-flex justify-content-start buttons">
                     <i class="fas fa-gear" style="font-size: 3vw; color:aqua;"></i>
                     <span class="ml-3" style="font-size: 2vw; color: aqua;">Settings</span>
@@ -98,8 +98,6 @@
                                     </div>
                                     <ul class="options">
                                         <li>COM 9</li>
-                                        <li>COM 10</li>
-                                        <li>COM 11</li>
                                     </ul>
                                 </div>
                             </div>
