--- a/device.html
+++ b/device.html
@@ -30,7 +30,7 @@
                 </button>
         
                 <!-- Button for Settings with icon and text -->
-                <button class="btn btn-link text-white my-4" type="button" title="Settings" onclick="window.location.href='backpage.html'">
+                <button class="btn btn-link text-white my-4" type="button" title="Settings" onclick="">
                   <div class="d-flex justify-content-start buttons ">
                     <i class="fas fa-sliders" style="font-size: 3vw; color: aqua;"></i>
                     <span class="ml-3" style="font-size: 2vw; color: aqua;">Device</span>
