--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="justify-content-start">
           <!-- Sidebar buttons with Font Awesome icons -->
-        <button class="btn btn-link text-white my-4" type="button" title="Home" onclick="window.location.href='index.html'">
+        <button class="btn btn-link text-white my-4" type="button" title="Home" onclick="">
           <div class="d-flex justify-content-start buttons">
             <i class="fas fa-house" style="font-size: 3vw; color:aqua;"></i>
             <span class="ml-3" style="font-size: 2vw; color: aqua;">Home</span>
@@ -41,7 +41,7 @@
         </button>
 
         <!-- Button for Settings with icon and text -->
-        <button class="btn btn-link text-white my-4" type="button" title="Settings" onclick="window.location.href='backpage.html'">
+        <button class="btn btn-link text-white my-4" type="button" title="Settings" onclick="window.location.href='device.html'">
           <div class="d-flex justify-content-start buttons">
             <i class="fas fa-sliders" style="font-size: 3vw;"></i>
             <span class="ml-3" style="font-size: 2vw;">Device</span>
